log/PMTfyDebug_2025/20250116_191711.out
nohup: ignoring input
Traceback (most recent call last):
  File "/lustre/hpc/icecube/cyan/factory/DOMification/PMTfy_by_subdir.py", line 7, in <module>
    from PMTfier import PMTfier
  File "/lustre/hpc/icecube/cyan/factory/DOMification/PMTfier.py", line 17, in <module>
    from PMT_truth_maker import PMTTruthMaker
  File "/lustre/hpc/icecube/cyan/factory/DOMification/PMT_truth_maker.py", line 458
    cursor = self.con_source.cursor()
    ^
IndentationError: expected an indented block
